navbar html ,js and styles completed

--- a/index.html
+++ b/index.html
@@ -13,7 +13,32 @@
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
     <link rel="stylesheet" href="./styles/main.css" />
-    <title>John Doe Portfolio</title>
+    <title>Kan Dhillon Portfolio</title>
   </head>
-  <body></body>
+  <body>
+    <!-- <h1>Main page</h1> -->
+    <!-------- NAVBAR --------->
+    <header>
+      <nav role="navigation" aria-label="Navigation">
+        <div class="container navbar">
+          <h1>Kan Dhillon.</h1>
+
+          <ul class="nav-menu">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#resume">Resume</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+
+          <button aria-label="Toggle Mobile Menu" class="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </button>
+        </div>
+      </nav>
+    </header>
+    <script src="./main.js"></script>
+  </body>
 </html>
