hero and about section done!

--- a/index.html
+++ b/index.html
@@ -39,6 +39,63 @@
         </div>
       </nav>
     </header>
+    <main>
+      <!--HERO SECTION -->
+      <section id="home" class="hero">
+        <div class="hero-overlay"></div>
+        <div class="container hero-content">
+          <div class="hero-text">
+            <h2 id="typed-text"></h2>
+          </div>
+
+          <div class="hero-socials" aria-label="Social Media Links">
+            <a href="#" aria-label="Twitter Link"
+              ><ion-icon name="logo-twitter"></ion-icon
+            ></a>
+            <a href="#" aria-label="Github Link"
+              ><ion-icon name="logo-github"></ion-icon
+            ></a>
+            <a href="#" aria-label="LinkedIn Link"
+              ><ion-icon name="logo-linkedin"></ion-icon
+            ></a>
+            <a href="#" aria-label="Facebook Link"
+              ><ion-icon name="logo-facebook"></ion-icon
+            ></a>
+          </div>
+        </div>
+      </section>
+      <!--ABOUT SECTION-->
+      <section class="about" id="about">
+        <div class="container">
+          <h1>
+            I'm <strong>Kanwar Dhillon</strong> and I'm a
+            <strong>full stack engineer</strong>
+          </h1>
+
+          <div class="about-info">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Distinctio expedita temporibus nobis dolores, quidem repellendus
+              voluptatibus sit. Natus quibusdam nulla ipsa molestiae. Nostrum
+              sed saepe tempore reprehenderit libero neque consequatur. Lorem
+              ipsum dolor sit, amet consectetur adipisicing elit. Ut dolorem
+              reprehenderit ipsam laboriosam minus eligendi autem laborum
+              blanditiis assumenda, cumque est dolor sed architecto, aspernatur
+              animi corrupti, rerum eveniet inventore? Lorem ipsum dolor sit,
+              amet consectetur adipisicing elit. Laudantium eius libero
+              corporis, quo blanditiis vitae autem modi! Repudiandae cupiditate
+              hic placeat fuga labore, minima, in mollitia architecto veritatis
+              error asperiores.
+            </p>
+          </div>
+
+          <button class="about-button" aria-label="Download Resume Button">
+            Download Resume
+            <ion-icon name="download-outline" aria-hidden="true"></ion-icon>
+          </button>
+        </div>
+      </section>
+    </main>
     <script src="./main.js"></script>
   </body>
 </html>
