projects sections html &javascript added

--- a/index.html
+++ b/index.html
@@ -264,6 +264,53 @@
           </div>
         </div>
       </section>
+      <!--PROJECTS SECTION -->
+      <section class="projects" id="projects">
+        <div class="container">
+          <h1>Some of my <strong>Projects</strong></h1>
+
+          <div class="filter">
+            <button data-filter="all" aria-label="Show all projects">
+              All
+            </button>
+            <button data-filter="react" aria-label="Show react projects">
+              React
+            </button>
+            <button data-filter="uiux" aria-label="Show UI/UX projects">
+              UI/UX
+            </button>
+            <button data-filter="python" aria-label="Show Python projects">
+              Python
+            </button>
+          </div>
+          <div class="project-grid">
+            <div class="project-card" data-category="react">
+              <h2>Awwwards</h2>
+              <img src="./assets/project-1.png" alt="react project" />
+            </div>
+            <div class="project-card" data-category="python">
+              <h2>Webflow</h2>
+              <img src="./assets/project-2.png" alt="python project" />
+            </div>
+            <div class="project-card" data-category="python">
+              <h2>Blocs</h2>
+              <img src="./assets/project-3.png" alt="python project" />
+            </div>
+            <div class="project-card" data-category="uiux">
+              <h2>Ooooucraft</h2>
+              <img src="./assets/project-4.png" alt="uiux project" />
+            </div>
+            <div class="project-card" data-category="uiux">
+              <h2>Ukit</h2>
+              <img src="./assets/project-5.png" alt="uiux project" />
+            </div>
+            <div class="project-card" data-category="react">
+              <h2>EverWeb</h2>
+              <img src="./assets/project-6.png" alt="react project" />
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <script src="./main.js"></script>
   </body>
